[gd_scene load_steps=15 format=3 uid="uid://cf8263un4w57g"]

[ext_resource type="Script" path="res://Scenes/MiniBoss/miniboss.gd" id="1_8kc7i"]
[ext_resource type="PackedScene" uid="uid://beyw4p4hskrmf" path="res://Scenes/MiniBoss/miniboss_basic_bullet.tscn" id="2_j8ybi"]
[ext_resource type="PackedScene" uid="uid://bvnvm63w85654" path="res://Scenes/Coin/coin.tscn" id="3_uukya"]
[ext_resource type="Texture2D" uid="uid://pkwp8ikm04ft" path="res://Assets/miniboss/Necromancer_creativekind-Sheet.png" id="4_400wk"]
[ext_resource type="Texture2D" uid="uid://cl8nfs5pcnn40" path="res://Assets/wizard/shield.png" id="5_vv0de"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cgjnm"]
size = Vector2(75, 177)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbt2x"]
size = Vector2(1654.5, 945)

[sub_resource type="Animation" id="Animation_vakdd"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_0swf0"]
resource_name = "move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_l8w4d"]
resource_name = "shoot"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ljrl5"]
_data = {
"idle": SubResource("Animation_vakdd"),
"move": SubResource("Animation_0swf0"),
"shoot": SubResource("Animation_l8w4d")
}

[sub_resource type="Theme" id="Theme_arav4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbu2q"]
bg_color = Color(0.6, 0.6, 0.6, 0.215686)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bvr32"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Miniboss" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_8kc7i")
maxHealth = 130
bulletSpeed = 200
bulletScene = ExtResource("2_j8ybi")
coinScene = ExtResource("3_uukya")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.356863, 0.564706, 1)
position = Vector2(-14, -90)
scale = Vector2(2.78449, 3.21094)
texture = ExtResource("4_400wk")
hframes = 17
vframes = 7
frame = 46

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-17.5, -3.5)
shape = SubResource("RectangleShape2D_cgjnm")

[node name="GroundRayCast" type="RayCast2D" parent="."]
position = Vector2(47, 13)
scale = Vector2(2, 2)
target_position = Vector2(0, 65)
collision_mask = 2

[node name="GroundRayCast2" type="RayCast2D" parent="."]
position = Vector2(-77, 13)
scale = Vector2(2, 2)
target_position = Vector2(0, 65)
collision_mask = 2

[node name="WallRayCast" type="RayCast2D" parent="."]
position = Vector2(6, 54)
rotation = -1.5708
target_position = Vector2(0, 25)
collision_mask = 2

[node name="WallRayCast2" type="RayCast2D" parent="."]
position = Vector2(4, -43)
rotation = -1.5708
target_position = Vector2(0, 25)
collision_mask = 2

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(865.75, -14.5)
shape = SubResource("RectangleShape2D_wbt2x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ljrl5")
}

[node name="StateChangeTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="LoseAggroTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Shield" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.207843, 0.878431, 1)
scale = Vector2(0.476619, 0.476619)
texture = ExtResource("5_vv0de")

[node name="HealthUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -36.0
offset_top = 80.0
offset_right = 4.0
offset_bottom = 120.0
metadata/_edit_group_ = true

[node name="Healthbar" type="ProgressBar" parent="HealthUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -13.5
offset_right = 67.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_arav4")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_tbu2q")
theme_override_styles/fill = SubResource("StyleBoxFlat_bvr32")
value = 100.0

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="StateChangeTimer" to="." method="_on_state_change_timer_timeout"]
[connection signal="timeout" from="LoseAggroTimer" to="." method="_on_lose_aggro_timer_timeout"]
